tests/typing/faulty_ops_a.sy
start :: fn do
    1 + 1
    "abc" + 1
end
// error: $BinOp { .. }
